fixing a few layout issues

--- a/src/styles/layouts/_header.scss
+++ b/src/styles/layouts/_header.scss
@@ -19,6 +19,7 @@
     .navbar-header {
       position: relative;
       width: 100%;
+      z-index: 2; // Make sure the logo floats above the nav so it's clickable.
     }
 
     .navbar-nav {
@@ -68,7 +69,7 @@
   background-image: url( ../images/logo.png );
   background-position: center center;
   background-size: contain;
-  background-repeat: none;
+  background-repeat: no-repeat;
   display: block;
   position: relative;
   @extend %center-h;
